--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -7,3 +7,7 @@ body {
 .shadow-la {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
+
+.text-display {
+    font-size: 1.2rem;
+}
